# rk3588-video-ai

./: .gitignore  CMakeLists.txt  README.md
configs/: app.yaml  models.yaml  streaming.yaml  streams.yaml
configs/examples/: app.yaml  models.yaml  streaming.yaml  streams.yaml
docs/: dev_log.md
include/app/: cli_args.h
include/config/: app_config.h  stream_config.h
include/logging/: logger.h
include/video/buffer/: frame_buffer.h
scripts/run/: run_local.sh
src/app/: cli_args.cpp  main.cpp
src/config/: app_config.cpp  stream_config.cpp
src/logging/: logger.cpp
src/video/buffer/: frame_buffer.cpp
资料/: 从0到1项目计划表.md  源项目理解笔记.md  项目待补充清单.md
